# ML-Employee-Attrition_project

./: README.md
Notebook/: Machine_learning_Project_.ipynb  app.ipynb  app.py  notebook.ipynb  predict.ipynb  predict.py
Notebook/model/: logistic_regression.pkl  random_forest.pkl  scaler.pkl
app/: app.ipynb
marimo/myproject/: Dockerfile  pyproject.toml  ranjit.py  requirements.txt
marimo/myproject/__marimo__/session/: ranjit.py.json
marimo/myproject/docs/: index.html
